# windows-key-listener

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
examples/: main.rs
src/: key_chord_parser.rs  key_listener.rs  lib.rs
