[package]
name = "windows-key-listener"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Zach Connelly"]
repository = "https://github.com/zmconnelly/windows-key-listener"
description = "Listen to arbitrary key chords on Windows."
readme = "README.md"
keywords = ["windows", "hotkey", "keyboard", "shortcut"]
categories = ["api-bindings", "os::windows-apis"]

[dependencies]
lazy_static = "1.5"
log = "0.4"
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
] }

[dev-dependencies]
windows-key-listener = { path = "." }
env_logger = "0.11"

[[example]]
name = "main"
path = "examples/main.rs"
